--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tauri-apps/api": "^1",
     "vue": "^3.3.4",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vuetify": "^3.6.13"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
