--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tabler/icons-vue": "^3.11.0",
     "@tauri-apps/api": "^1",
     "vue": "^3.3.4",
     "vue-router": "^4.4.0",
