--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "docker:dev": "docker run -it --rm -v \"$(pwd)\":/app -p 1420:1420 salasil-frontend",
+    "docker:build": "docker build -t salasil-frontend .",
     "tauri": "tauri"
   },
   "dependencies": {
     "@tabler/icons-vue": "^3.11.0",
-    "@tauri-apps/api": "^1",
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/plugin-shell": "^2.3.0",
     "@videojs-player/vue": "^1.0.0",
     "video.js": "^7.21.6",
     "videojs-http-source-selector": "^1.1.6",
@@ -21,7 +24,7 @@
     "vuetify": "^3.6.13"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
+    "@tauri-apps/cli": "^2.6.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
