--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 1422",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "docker:dev": "docker run -it --rm -v \"$(pwd)\":/app -p 1420:1420 salasil-frontend",
